<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/button_0"
        style="@style/button_style"
        android:text="@string/_0"
        android:backgroundTint="@color/dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_dot"
        style="@style/button_style"
        android:text="@string/_dot"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_0" />

    <Button
        android:id="@+id/button_equal"
        style="@style/button_style"
        android:text="@string/_equal"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_dot" />

    <Button
        android:id="@+id/button_minus"
        style="@style/button_style"
        android:text="@string/_minus"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_equal" />

    <Button
        android:id="@+id/button_1"
        style="@style/button_style"
        android:text="@string/_1"
        android:backgroundTint="@color/silver"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_2"
        style="@style/button_style"
        android:text="@string/_2"
        android:backgroundTint="@color/silver"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        app:layout_constraintStart_toEndOf="@+id/button_1" />

    <Button
        android:id="@+id/button_3"
        style="@style/button_style"
        android:text="@string/_3"
        android:backgroundTint="@color/silver"
        app:layout_constraintBottom_toTopOf="@+id/button_equal"
        app:layout_constraintStart_toEndOf="@+id/button_2" />

    <Button
        android:id="@+id/button_add"
        style="@style/button_style"
        android:text="@string/_add"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button_3" />

    <Button
        android:id="@+id/button_4"
        style="@style/button_style"
        android:text="@string/_4"
        android:backgroundTint="@color/silver"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_5"
        style="@style/button_style"
        android:text="@string/_5"
        android:backgroundTint="@color/silver"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintStart_toEndOf="@+id/button_4" />

    <Button
        android:id="@+id/button_6"
        style="@style/button_style"
        android:text="@string/_6"
        android:backgroundTint="@color/silver"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_5" />

    <Button
        android:id="@+id/button_div"
        style="@style/button_style"
        android:text="@string/_minus"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintStart_toEndOf="@+id/button_6" />

    <Button
        android:id="@+id/button_7"
        style="@style/button_style"
        android:text="@string/_7"
        android:backgroundTint="@color/silver"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_8"
        style="@style/button_style"
        android:text="@string/_8"
        android:backgroundTint="@color/silver"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintStart_toEndOf="@+id/button_7" />

    <Button
        android:id="@+id/button_9"
        style="@style/button_style"
        android:text="@string/_9"
        android:backgroundTint="@color/silver"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_8" />

    <Button
        android:id="@+id/button_multi"
        style="@style/button_style"
        android:text="@string/_multi"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/button_div"
        app:layout_constraintStart_toEndOf="@+id/button_9" />

    <Button
        android:id="@+id/button_open"
        style="@style/button_style"
        android:text="@string/_open"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_close"
        style="@style/button_style"
        android:text="@string/_close"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintStart_toEndOf="@+id/button_open" />

    <Button
        android:id="@+id/button_exp"
        style="@style/button_style"
        android:text="@string/_exp"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_close" />

    <Button
        android:id="@+id/button_ac"
        style="@style/button_style"
        android:longClickable="true"
        android:text="@string/_ac"
        android:backgroundTint="@color/maroon"
        app:layout_constraintBottom_toTopOf="@+id/button_multi"
        app:layout_constraintStart_toEndOf="@+id/button_exp" />
</androidx.constraintlayout.widget.ConstraintLayout>
